--- a/.graphqlconfig.yml
+++ b/.graphqlconfig.yml
@@ -1,6 +1,6 @@
 projects:
   amplifyDemo:
-    schemaPath: src/graphql/schema.json
+    schemaPath: amplify/backend/api/amplifyDemo/build/schema.graphql
     includes:
       - src/graphql/**/*.js
     excludes:
@@ -10,3 +10,6 @@ projects:
         codeGenTarget: javascript
         generatedFileName: ''
         docsFilePath: src/graphql
+        region: us-east-2
+        apiId: d3r6acijq7u633
+        maxDepth: 2
